Added boot issues guide Updated getting started guide

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ layout: default
   </div>
   <div class='span4'>
     <h2>Used across the world</h2>
-    <p>PiNet is already used across the world by 100s of schools and organisations in countries including United Kingdom, China, Brizil, South Africa, United States of America, Canada. </p>
+    <p>PiNet is already used across the world by 100s of schools and organisations in over 30 countries including United Kingdom, China, Brizil, South Africa and the United States. </p>
   </div>
 </div>
