--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   </div>
   <div class='clear' style=''></div>
   <p style=''>
-    A system for setting up and managing a classroom set of Raspberry Pis.
+    Centralised user accounts and file storage system for a Raspberry Pi classroom.
   </p>
   <a class='btn btn-primary btn-large' href='/articles/installation/getting_started.html'>Get Started! »</a>
   <a class="btn btn-large" href="/articles/guides.html">Main Documentation »</a>
