--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
   </p>
   <a class='btn btn-primary btn-large' href='/articles/installation/getting_started.html'>Get Started! »</a>
   <a class="btn btn-large" href="/articles/guides.html">Main Documentation »</a>
+  <a class="btn btn-large" href="/blog/bloglist.html">PiNet Blog »</a>
   <a class='btn btn-large' href='http://eepurl.com/bgGfsH'>Join the Mailing List »</a>
 </div>
 <div class='row-fluid'>
