Update index page to add an additional reference to LTSP

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
   </div>
   <div class='span4'>
     <h2>Completely Free</h2>
-    <p>PiNet is completely free and open source. This means you can use it for what you want, where you want for no cost and have access to all the source code to modify if you want.</p>
+    <p>PiNet is completely free, open source and built upon the work of the <a href="http://ltsp.org">Linux Terminal Server Project</a>. This means you can use it for what you want, where you want for no cost and have access to the full source code.</p>
   </div>
   <div class='span4'>
     <h2>Used across the world</h2>
